Fixed HTML validation errors by changing <div> hovers to <span> instead. Verified on Safari, Chrome, and FF, not IE yet.

--- a/static_files/netHackDaily.css
+++ b/static_files/netHackDaily.css
@@ -65,7 +65,7 @@ a.inv {
 	color: black;
 }
 
-a.inv div {
+a.inv span {
 	display: none;
 }
 
@@ -76,7 +76,7 @@ a.inv:hover {
 }
 */
 
-a.inv:hover div {
+a.inv:hover span {
     padding: 5px 20px 5px 5px;
     display: block;
     z-index: 100;
@@ -97,7 +97,7 @@ a.det {
 	color: black;
 }
 
-a.det div {
+a.det span {
     display: none;
 }
 
@@ -106,7 +106,7 @@ a.det:hover {
 	position: relative;
 }
 
-a.det:hover div {
+a.det:hover span {
     padding: 5px 20px 5px 5px;
     display: block;
     z-index: 100;
